# workshop-dw-pagando-pouco

./: .env-example  .gitignore  .pre-commit-config.yaml  README.md  catalogao.csv  catalogao.md  database.db  kpi.csv  log.py  loja.parquet  pipeline.py  pyproject.toml
analitycs/: kpi.sql  parquet_to_csv.sql  query.sql  resultado.sql
app/contract/: product_schema.py
backend/: start.py
backend/contracts/: schema.py
backend/datasource/: api.py  postgre.py
backend/fakeapi/: start.py
backend/tools/aws/: client.py
backend/tools/sql/db/: database_connection.py  transactions_model.py
docs/: index.md
faker/: data_saver.py  database_setup.py  db_connector.py  drop_table.py  logging_utils.py  pipeline.py  query_db.py  retail_sales.py
frontend/: main.py
frontend/aws/: client.py
frontend/contract/: catalogo.py
frontend/datasource/: csv.py
frontend_linguicao/: main.py
frontend_linguicao/contract/: schema.py
frontend_linguicao/service/: aws.py
notebooks/: Read_Delta_Lake_from_S3.ipynb
scripts/: main.py  pipeline.py
scripts/etl/db/: database_connection.py  transactions_model.py
scripts/etl/extract/: extract.py  transactions_schema.py
scripts/etl/load/: load.py  s3_config_model.py
scripts/etl/transformation/: tranformation.py
scripts/etl_scripts/extract/: extract.py
scripts/etl_scripts/load/: load.py
scripts/etl_scripts/load/models/: s3_config.py
scripts/etl_scripts/transform/: transform.py
scripts/utility_scripts/: __init__.py  logging_utils.py
transformation/: dbt_project.yml
