[tool.poetry]
name = "workshop-dw-pagando-pouco"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "workshop_dw_pagando_pouco"}]

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^0.9.2"
pyarrow = "^14.0.1"
deltalake = "^0.14.0"
boto3 = "^1.33.11"
python-dotenv = "^1.0.0"
taskipy = "^1.12.2"
loguru = "^0.7.2"
pydantic = "^2.5.2"
notebook = "^7.0.6"
isort = "^5.13.0"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.13.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "python scripts/pipeline.py"